src/test/resources/typeSystemTestModels/valid/expressions/ExpressionOperations.java
public class ExpressionOperations{

  public void haha(){
    String s = null;
  }

}
